--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -60,3 +60,7 @@ body {
 .btn-disabled {
   @apply bg-gray-400 text-white py-2 px-4 rounded transition-all;
 }
+
+.btn-danger {
+  @apply bg-red-500 hover:bg-red-700 text-white py-2 px-4 transition-all;
+}
